--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "classnames": "*",
     "lodash.debounce": "4.0.3",
     "lodash.values": "4.1.0",
+    "rc-menu": "^5.0.7",
     "react": "0.14.7",
     "react-dom": "0.14.7",
     "react-scrollbar": "0.4.0",
